fix middle name; add all author name

--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,4 @@
+% ----- Text-to-Image Generation -----
 % VQVAE
 @inproceedings{NIPS2017_7a98af17,
     title = {Neural Discrete Representation Learning},
@@ -9,7 +10,7 @@
 
 @inproceedings{zhang2017stackgan,
     title={{StackGAN}: {Text} to Photo-realistic Image Synthesis with Stacked Generative Adversarial Networks},
-    author={Zhang, Han and Xu, Tao and Li, Hongsheng and Zhang, Shaoting and Wang, Xiaogang and Huang, Xiaolei and Metaxas, Dimitris N},
+    author={Zhang, Han and Xu, Tao and Li, Hongsheng and Zhang, Shaoting and Wang, Xiaogang and Huang, Xiaolei and Metaxas, Dimitris N.},
     booktitle={IEEE International Conference on Computer Vision},
     pages={5907--5915},
     year={2017}
@@ -49,21 +50,19 @@
 
 @inproceedings{ding2021cogview,
     title={{CogView}: {Mastering} Text-to-Image Generation via Transformers},
-    author={Ding, Ming and Yang, Zhuoyi and Hong, Wenyi and Zheng, Wendi and Zhou, Chang and Yin, Da and Lin, Junyang and Zou, Xu and Shao, Zhou and Yang, Hongxia and others},
+    author={Ding, Ming and Yang, Zhuoyi and Hong, Wenyi and Zheng, Wendi and Zhou, Chang and Yin, Da and Lin, Junyang and Zou, Xu and Shao, Zhou and Yang, Hongxia and Tang, Jie},
     booktitle={Advances in Neural Information Processing Systems},
     pages={19822--19835},
     year={2021}
 }
 
 % GAN
-@article{goodfellow2020generative,
-    title={Generative Adversarial Networks},
+@inproceedings{NIPS2014_5ca3e9b1,
+    title={Generative Adversarial Nets},
     author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
-    journal={Communications of the ACM},
-    volume={63},
-    number={11},
-    pages={139--144},
-    year={2020},
+    booktitle={Advances in Neural Information Processing Systems},
+    pages={2672–2680},
+    year={2014}
 }
 
 @inproceedings{reed2016generative,
@@ -76,7 +75,7 @@
 
 @article{chang2023muse,
     title={{Muse}: {Text-To-Image} Generation via Masked Generative Transformers},
-    author={Chang, Huiwen and Zhang, Han and Barber, Jarred and Maschinot, AJ and Lezama, Jose and Jiang, Lu and Yang, Ming-Hsuan and Murphy, Kevin and Freeman, William T and Rubinstein, Michael and Li, Yuanzhen and Krishnan, Dilip},
+    author={Chang, Huiwen and Zhang, Han and Barber, Jarred and Maschinot, Aaron and Lezama, Jose and Jiang, Lu and Yang, Ming-Hsuan and Murphy, Kevin and Freeman, William T. and Rubinstein, Michael and Li, Yuanzhen and Krishnan, Dilip},
     journal={arXiv preprint arXiv:2301.00704},
     year={2023}
 }
@@ -99,10 +98,9 @@
     year={2022}
 }
 
-% Parti
-@article{yu2022scaling,
+@inproceedings{yu2022scaling,
     title={Scaling Autoregressive Models for Content-Rich Text-to-Image Generation},
-    author={Yu, Jiahui and Xu, Yuanzhong and Koh, Jing Yu and Luong, Thang and Baid, Gunjan and Wang, Zirui and Vasudevan, Vijay and Ku, Alexander and Yang, Yinfei and Ayan, Burcu Karagol and Hutchinson, Ben and Han, Wei and Parekh, Zarana and Li, Xin and Zhang, Han and Baldridge, Jason Wu, Yonghui and},
+    author={Yu, Jiahui and Xu, Yuanzhong and Koh, Jing-Yu and Luong, Thang and Baid, Gunjan and Wang, Zirui and Vasudevan, Vijay and Ku, Alexander and Yang, Yinfei and Ayan, Burcu-Karagol and Hutchinson, Ben and Han, Wei and Parekh, Zarana and Li, Xin and Zhang, Han and Baldridge, Jason and Wu, Yonghui},
     journal={arXiv preprint arXiv:2206.10789},
     year={2022}
 }
@@ -111,36 +109,39 @@
 @inproceedings{ho2020denoising,
     title={Denoising Diffusion Probabilistic Models},
     author={Ho, Jonathan and Jain, Ajay and Abbeel, Pieter},
-    journal={Advances in Neural Information Processing Systems},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={6840--6851},
     year={2020}
 }
 
-@article{nichol2021glide,
+@inproceedings{nichol2021glide,
     title={{GLIDE}: {Towards} Photorealistic Image Generation and Editing with Text-Guided Diffusion Models},
     author={Nichol, Alex and Dhariwal, Prafulla and Ramesh, Aditya and Shyam, Pranav and Mishkin, Pamela and McGrew, Bob and Sutskever, Ilya and Chen, Mark},
     journal={arXiv preprint arXiv:2112.10741},
     year={2021}
 }
 
-% GigaGAN
-@article{kang2023scaling,
+@inproceedings{kang2023scaling,
     title={Scaling up GANs for Text-to-Image Synthesis},
     author={Kang, Minguk and Zhu, Jun-Yan and Zhang, Richard and Park, Jaesik and Shechtman, Eli and Paris, Sylvain and Park, Taesung},
     journal={arXiv preprint arXiv:2303.05511},
     year={2023}
 }
+% ----- Text-to-Image Generation -----
 
+
+
+% ----- SVG Generation -----
 @inproceedings{carlier2020deepsvg,
     title={{DeepSVG}: {A} Hierarchical Generative Network for Vector Graphics Animation},
     author={Carlier, Alexandre and Danelljan, Martin and Alahi, Alexandre and Timofte, Radu},
-    journal={Advances in Neural Information Processing Systems},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={16351--16361},
     year={2020}
 }
 
 @inproceedings{probets2001vector,
-    title={{Vector graphics}: {From} PostScript and Flash to SVG},
+    title={{Vector Graphics}: {From} PostScript and Flash to SVG},
     author={Probets, Steve and Mong, Julius and Evans, David and Brailsford, David},
     booktitle={ACM Symposium on Document Engineering},
     pages={135--143},
@@ -149,7 +150,7 @@
 
 @article{bergen2012automatic,
     title={Automatic and Interactive Evolution of Vector Graphics Images with Genetic Algorithms},
-    author={Bergen, Steven and Ross, Brian J},
+    author={Bergen, Steven and Ross, Brian J.},
     journal={The Visual Computer},
     volume={28},
     number={1},
@@ -157,6 +158,8 @@
     year={2012},
 }
 
+
+% --- Font Generation ---
 @inproceedings{aoki2022svg,
     title={SVG Vector Font Generation for Chinese Characters with Transformer},
     author={Aoki, Haruka and Aizawa, Kiyoharu},
@@ -174,6 +177,7 @@
     pages={1--15},
     year={2021},
 }
+% --- Font Generation ---
 
 @inproceedings{reddy2021im2vec,
     title={{Im2Vec}: {Synthesizing} Vector Graphics without Vector Supervision},
@@ -183,7 +187,7 @@
     year={2021}
 }
 
-@article{ha2017neural,
+@inproceedings{ha2017neural,
     title={A Neural Representation of Sketch Drawings},
     author={Ha, David and Eck, Douglas},
     journal={arXiv preprint arXiv:1704.03477},
@@ -191,16 +195,16 @@
 }
 
 @inproceedings{lopes2019learned,
-    title={A Learned Representation for Scalable Vector Graphics},
-    author={Lopes, Raphael Gontijo and Ha, David and Eck, Douglas and Shlens, Jonathon},
-    booktitle={IEEE International Conference on Computer Vision},
-    pages={7930--7939},
-    year={2019}
+  title={A Learned Representation for Scalable Vector Graphics},
+  author={Lopes, Raphael G. and Ha, David and Eck, Douglas and Shlens, Jonathon},
+  booktitle={IEEE International Conference on Computer Vision},
+  pages={7930--7939},
+  year={2019}
 }
 
 @article{vinker2022clipasso,
     title={{CLIPasso}: {Semantically-Aware} Object Sketching},
-    author={Vinker, Yael and Pajouheshgar, Ehsan and Bo, Jessica Y and Bachmann, Roman Christian and Bermano, Amit Haim and Cohen-Or, Daniel and Zamir, Amir and Shamir, Ariel},
+    author={Vinker, Yael and Pajouheshgar, Ehsan and Bo, Jessica Y. and Bachmann, Roman and Bermano, Amit H. and Cohen-Or, Daniel and Zamir, Amir and Shamir, Ariel},
     journal={ACM Transactions on Graphics},
     volume={41},
     number={4},
@@ -208,18 +212,18 @@
     year={2022},
 }
 
-@article{frans2021clipdraw,
+@inproceedings{frans2021clipdraw,
   title={{CLIPDraw}: {Exploring} Text-to-Drawing Synthesis through Language-Image Encoders},
-  author={Frans, Kevin and Soros, Lisa B and Witkowski, Olaf},
+  author={Frans, Kevin and Soros, Lisa B. and Witkowski, Olaf},
   journal={arXiv preprint arXiv:2106.14843},
   year={2021}
 }
 
 @inproceedings{xu2022skexgen,
     title={{SkexGen}: {Autoregressive} Generation of CAD Construction Sequences with Disentangled Codebooks},
-    author={Xu, Xiang and Willis, Karl DD and Lambourne, Joseph G and Cheng, Chin-Yi and Jayaraman, Pradeep Kumar and Furukawa, Yasutaka},
+    author={Xu, Xiang and Willis, Karl D. D. and Lambourne, Joseph G. and Cheng, Chin-Yi and Jayaraman, Pradeep K. and Furukawa, Yasutaka},
     booktitle={International Conference on Machine Learning},
-    pages={},
+    pages={24698-24724},
     year={2022},
 }
 
@@ -231,34 +235,32 @@
     year={2021}
 }
 
-@article{jain2022vectorfusion,
+@inproceedings{jain2022vectorfusion,
     title={{VectorFusion}: {Text-to-SVG} by Abstracting Pixel-Based Diffusion Models},
     author={Jain, Ajay and Xie, Amber and Abbeel, Pieter},
     journal={arXiv preprint arXiv:2211.11319},
     year={2022}
 }
 
-@article{devlin2018bert,
+@inproceedings{devlin2018bert,
     title={{BERT}: {Pre-training} of Deep Bidirectional Transformers for Language Understanding},
     author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
     journal={arXiv preprint arXiv:1810.04805},
     year={2018}
 }
 
-@article{turc2019,
+@inproceedings{turc2019,
     title={{Well-Read Students Learn Better}: {On} the Importance of Pre-training Compact Models},
     author={Turc, Iulia and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
-    journal={arXiv preprint arXiv:1908.08962v2 },
+    journal={arXiv preprint arXiv:1908.08962v2},
     year={2019}
 }
 
-@misc{openai2023gpt4,
-    title={GPT-4 Technical Report}, 
+@inproceedings{openai2023gpt4,
+    title={GPT-4 Technical Report},
     author={OpenAI},
-    year={2023},
-    eprint={2303.08774},
-    archivePrefix={arXiv},
-    primaryClass={cs.CL}
+    journal={arXiv preprint arXiv:2303.08774},
+    year={2023}
 }
 
 @article{Li:2020:DVG,
@@ -271,7 +273,6 @@
     year={2020}
 }
 
-% LIVE
 @inproceedings{ma2022towards,
     title={Towards Layer-wise Image Vectorization},
     author={Ma, Xu and Zhou, Yuqian and Xu, Xingqian and Sun, Bin and Filev, Valerii and Orlov, Nikita and Fu, Yun and Shi, Humphrey},
@@ -279,7 +280,11 @@
     pages={16314--16323},
     year={2022}
 }
+% ----- SVG Generation -----
 
+
+
+% ----- Transformer -----
 @inproceedings{esser2021taming,
     title={Taming Transformers for High-Resolution Image Synthesis},
     author={Esser, Patrick and Rombach, Robin and Ommer, Bjorn},
@@ -299,14 +304,14 @@
 @inproceedings{jiang2021transgan,
     title={{TransGAN}: {Two} Pure Transformers Can Make One Strong GAN, and That Can Scale Up},
     author={Jiang, Yifan and Chang, Shiyu and Wang, Zhangyang},
-    journal={Advances in Neural Information Processing Systems},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={14745--14758},
     year={2021}
 }
 
 @article{raffel2020exploring,
     title={Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
-    author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
+    author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J.},
     journal={The Journal of Machine Learning Research},
     volume={21},
     number={1},
@@ -314,31 +319,32 @@
     year={2020},
 }
 
-@article{valle2020flowtron,
+@inproceedings{valle2020flowtron,
     title={{Flowtron}: {An} Autoregressive Flow-based Generative Network for Text-to-Speech Synthesis},
     author={Valle, Rafael and Shih, Kevin and Prenger, Ryan and Catanzaro, Bryan},
     journal={arXiv preprint arXiv:2005.05957},
     year={2020}
 }
 
-@article{huang2018music,
+@inproceedings{huang2018music,
     title={Music Transformer},
-    author={Huang, Cheng-Zhi Anna and Vaswani, Ashish and Uszkoreit, Jakob and Shazeer, Noam and Simon, Ian and Hawthorne, Curtis and Dai, Andrew M and Hoffman, Matthew D and Dinculescu, Monica and Eck, Douglas},
+    author={Huang, Cheng-Zhi Anna and Vaswani, Ashish and Uszkoreit, Jakob and Shazeer, Noam and Simon, Ian and Hawthorne, Curtis and Dai, Andrew M. and Hoffman, Matthew D. and Dinculescu, Monica and Eck, Douglas},
     journal={arXiv preprint arXiv:1809.04281},
     year={2018}
 }
 
+
 @inproceedings{brown2020language,
     title={Language Models are Few-Shot Learners},
-    author={Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
-    journal={Advances in Neural Information Processing Systems},
+    author={Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and Herbert-Voss, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={1877--1901},
     year={2020}
 }
 
-@article{radford2019language,
+@inproceedings{radford2019language,
     title={Language Models are Unsupervised Multitask Learners},
-    author={Radford, Alec and Wu, Jeffrey and Child, Rewon and Luan, David and Amodei, Dario and Sutskever, Ilya and others},
+    author={Radford, Alec and Wu, Jeffrey and Child, Rewon and Luan, David and Amodei, Dario and Sutskever, Ilya},
     journal={OpenAI blog},
     volume={1},
     number={8},
@@ -356,40 +362,35 @@
 
 @inproceedings{vaswani2017attention,
     title={Attention Is All You Need},
-    author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
-    journal={Advances in Neural Information Processing Systems},
+    author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={6000--6010},
     year={2017}
 }
 
-@article{aghajanyan2022cm3,
+% Fill in the Middle
+@inproceedings{aghajanyan2022cm3,
     title={{CM3}: {A} Causal Masked Multimodal Model of the Internet},
-    author={Aghajanyan, Armen and Huang, Bernie and Ross, Candace and Karpukhin, Vladimir and Xu, Hu and Goyal, Naman and Okhonko, Dmytro and Joshi, Mandar and Ghosh, Gargi and Lewis, Mike and others},
+    author={Aghajanyan, Armen and Huang, Bernie and Ross, Candace and Karpukhin, Vladimir and Xu, Hu and Goyal, Naman and Okhonko, Dmytro and Joshi, Mandar and Ghosh, Gargi and Lewis, Mike and Zettlemoyer, Luke},
     journal={arXiv preprint arXiv:2201.07520},
     year={2022}
-}
-
-@article{fried2022incoder,
-  title={{InCoder}: {A} Generative Model for Code Infilling and Synthesis},
-  author={Fried, Daniel and Aghajanyan, Armen and Lin, Jessy and Wang, Sida and Wallace, Eric and Shi, Freda and Zhong, Ruiqi and Yih, Wen-tau and Zettlemoyer, Luke and Lewis, Mike},
-  journal={arXiv preprint arXiv:2204.05999},
-  year={2022}
 }
 
 @inproceedings{fried2023incoder,
     title={{InCoder}: {A} Generative Model for Code Infilling and Synthesis},
     author={Fried, Daniel and Aghajanyan, Armen and Lin, Jessy and Wang, Sida and Wallace, Eric and Shi, Freda and Zhong, Ruiqi and Yih, Wen-tau and Zettlemoyer, Luke and Lewis, Mike},
-    booktitle={The Eleventh International Conference on Learning Representations},
+    booktitle={International Conference on Learning Representations},
     year={2023},
 }
 
-@article{bavarian2022efficient,
+@inproceedings{bavarian2022efficient,
     title={Efficient Training of Language Models to Fill in the Middle},
     author={Bavarian, Mohammad and Jun, Heewoo and Tezak, Nikolas and Schulman, John and McLeavey, Christine and Tworek, Jerry and Chen, Mark},
     journal={arXiv preprint arXiv:2207.14255},
     year={2022}
 }
 
+% BERT for Generation
 @inproceedings{Chang_2022_CVPR,
     title={MaskGIT: Masked Generative Image Transformer},
     author={Chang, Huiwen and Zhang, Han and Jiang, Lu and Liu, Ce and Freeman, William T.},
@@ -398,90 +399,116 @@
     year={2022}
 }
 
-@article{zhang2021m6,
+@inproceedings{zhang2021m6,
     title={{M6-UFC}: {Unifying} Multi-Modal Controls for Conditional Image Synthesis via Non-Autoregressive Generative Transformers},
     author={Zhang, Zhu and Ma, Jianxin and Zhou, Chang and Men, Rui and Li, Zhikang and Ding, Ming and Tang, Jie and Zhou, Jingren and Yang, Hongxia},
     journal={arXiv preprint arXiv:2105.14211},
     year={2021}
 }
 
-@article{ding2022cogview2,
+@inproceedings{ding2022cogview2,
     title={{CogView2}: {Faster} and Better Text-to-Image Generation via Hierarchical Transformers},
     author={Ding, Ming and Zheng, Wendi and Hong, Wenyi and Tang, Jie},
     journal={arXiv preprint arXiv:2204.14217},
     year={2022}
 }
+% ----- Transformer -----
 
-% LSTM
+
+
+% ----- Other Model -----
 @article{hochreiter1997long,
     title={Long Short-term Memory},
     author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
-    journal={Neural computation},
+    journal={Neural Computation},
     volume={9},
     number={8},
     pages={1735--1780},
     year={1997},
 }
 
-@article{kingma2013auto,
+@inproceedings{kingma2013auto,
     title={Auto-Encoding Variational Bayes},
-    author={Kingma, Diederik P and Welling, Max},
+    author={Kingma, Diederik P. and Welling, Max},
     journal={arXiv preprint arXiv:1312.6114},
     year={2013}
 }
 
 @inproceedings{radford2021learning,
     title={Learning Transferable Visual Models From Natural Language Supervision},
-    author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+    author={Radford, Alec and Kim, Jong-Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and Krueger, Gretchen and Sutskever, Ilya},
     booktitle={International Conference on Machine Learning},
     pages={8748--8763},
     year={2021},
 }
+% ----- Ohter Model -----
 
-@article{clouatre2019figr,
+
+
+% ----- Dataset -----
+@inproceedings{clouatre2019figr,
     title={{FIGR}: {Few-shot} Image Generation with Reptile},
     author={Clou{\^a}tre, Louis and Demers, Marc},
     journal={arXiv preprint arXiv:1901.02199},
     year={2019}
 }
+% ----- Dataset -----
 
-@article{brooks2022instructpix2pix,
+
+
+% ----- Text -----
+@inproceedings{brooks2022instructpix2pix,
     title={{InstructPix2Pix}: {Learning} to Follow Image Editing Instructions},
-    author={Brooks, Tim and Holynski, Aleksander and Efros, Alexei A},
+    author={Brooks, Tim and Holynski, Aleksander and Efros, Alexei A.},
     journal={arXiv preprint arXiv:2211.09800},
     year={2022}
 }
 
 @inproceedings{saharia2022photorealistic,
     title={Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding},
-    author={Saharia, Chitwan and Chan, William and Saxena, Saurabh and Li, Lala and Whang, Jay and Denton, Emily and Ghasemipour, Seyed Kamyar Seyed and Ayan, Burcu Karagol and Mahdavi, S Sara and Lopes, Rapha Gontijo and others},
+    author={Saharia, Chitwan and Chan, William and Saxena, Saurabh and Li, Lala and Whang, Jay and Denton, Emily and Ghasemipour, Seyed K. S. and Ayan, Burcu-Karagol and Mahdavi, S. Sara and Lopes, Rapha G. and Salimans, Tim and Ho, Jonathan and Fleet, David J. and Norouzi, Mohammad},
     booktitle={Advances in Neural Information Processing Systems},
     pages={36479--36494},
     year={2022}
 }
+% ----- Text -----
 
-@article{mikolov2013efficient,
+
+
+% ----- Website -----
+@misc{w3c_svg,
+  title={The W3C SVG Working Group},
+  howpublished = "\url{https://www.w3.org/Graphics/SVG}"
+}
+% ----- Website -----
+
+
+% ----- Text -----
+@inproceedings{mikolov2013efficient,
     title={Efficient Estimation of Word Representations in Vector Space},
     author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
     journal={arXiv preprint arXiv:1301.3781},
     year={2013}
 }
 
-@article{sennrich2015neural,
+@inproceedings{sennrich2015neural,
     title={Neural Machine Translation of Rare Words with Subword Units},
     author={Sennrich, Rico and Haddow, Barry and Birch, Alexandra},
     journal={arXiv preprint arXiv:1508.07909},
     year={2015}
 }
+% ----- Text -----
 
-@article{kingma2014adam,
+
+@inproceedings{kingma2014adam,
     title={{Adam}: {A} Method for Stochastic Optimization},
-    author={Kingma, Diederik P and Ba, Jimmy},
+    author={Kingma, Diederik P. and Ba, Jimmy},
     journal={arXiv preprint arXiv:1412.6980},
     year={2014}
 }
 
-@article{heusel2017gans,
+% FID
+@inproceedings{heusel2017gans,
     title={GANs Trained by a Two Time-Scale Update Rule Converge to a Local Nash Equilibrium},
     author={Heusel, Martin and Ramsauer, Hubert and Unterthiner, Thomas and Nessler, Bernhard and Hochreiter, Sepp},
     booktitle={Advances in Neural Information Processing Systems},
